# banking-compalint-agent-group-6

./: .gitignore  ARCHITECTURE.md  BACKEND_PLAN.md  DATABASE_PLAN.md  FRONTEND_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.langfuse.yml  flow.md  important-plan.md  integration_digest.md
.copilot/session-state/2e89b62e-5a09-498b-bdb3-fc9321a26832/: plan.md
agent/: .env.example  AGENTS.md  Dockerfile.dev  TODO.md  backend_client.py  database.py  extraction_agent.py  llm_config.py  main.py  model_pricing.py  mortgage_rules.py  pipeline.py  pyproject.toml  run_e2e_test.py  schemas.py  tracing.py
agent/categorization_agent/: __init__.py  agent.py  complaint_tree.json
agent/data_retrieval_agent/: __init__.py  agent.py  mock_data.py  mortgage_mock_data.py
agent/drafting_agent/: __init__.py  agent.py
agent/extracting_agent/: __init__.py  agent.py
agent/tests/: test_backend_client.py  test_complaint_form_validation.py  test_mortgage_mock_data.py  test_mortgage_rules.py
agent/tests/document_type_tool/: test_document_type_tool.py
backend/: Dockerfile.dev  pom.xml
database/: 00_create_database.sql  01_schema.sql  02_seed.sql  03_validate.sql  04_agent_columns.sql  05_seed_complaints.sql  README.md
docs/superpowers/plans/: 2026-04-24-agent-debug-console.md  2026-04-25-complaint-modal-draft-buttons.md  2026-04-25-mortgage-complaint-tree-rebuttals.md
docs/superpowers/specs/: 2026-04-24-agent-debug-console-design.md  (+3 more)
frontend/: .env.example  Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
(+76 files in other folders)
