[project]
name = "complaint-agent-api"
version = "0.1.0"
description = "Hackathon FastAPI service for banking complaint intake and drafting"
readme = "AGENTS.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "openai>=1.0.0,<2.0.0",
    "pypdf>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
